Fix overflow error. Or more of a workaround.

--- a/frontend/src/components/_generic/parts/DraggableSubWindow.css
+++ b/frontend/src/components/_generic/parts/DraggableSubWindow.css
@@ -6,14 +6,13 @@
     flex-direction: column;
     z-index: 30;
     border-radius: 10px;
-    border: 1px solid black;
     overflow: hidden;
+    border: 1px solid black;
 }
 
 .draggableSubWindow .draggableSubWindowBody {
     display: flex;
     flex-direction: column;
-    position: relative;
-    padding: 10px;
     flex:1;
+    overflow: hidden;
 }
