--- a/frontend/src/components/article/parts/ArticleCard.css
+++ b/frontend/src/components/article/parts/ArticleCard.css
@@ -1,10 +1,10 @@
 .articleCard {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 95%;
     padding-top: 10px;
     overflow: scroll;
-
+    overflow-x: hidden;
 }
 
 .articleCard .articleContent {
